# Camera_Flet

./: main.py  pyproject.toml  requirements.txt
.flet/: build.gradle
.github/workflows/: build.yml
