[project]
name = "flet_cam"
version = "1.0.0"
description = "Flet Camera Demo"
readme = "README.md"
requires-python = ">=3.10"

# 关键修复：在这里也必须强制锁定版本，防止安装成最新版
dependencies = [
    "flet==0.22.1"
]

[tool.flet]
product_name = "Flet相机"
org = "com.mycamera"
author = "User"

permissions = [
    "android.permission.CAMERA",
    "android.permission.WRITE_EXTERNAL_STORAGE",
    "android.permission.READ_EXTERNAL_STORAGE"
]

include = [
    "main.py",
    "assets"
]