[project]
name = "flet_cam"
version = "1.0.0"
description = "Flet Camera Demo"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "flet==0.23.2"
]

[tool.flet]
product_name = "Flet相机"
org = "com.mycamera"
author = "User"

# 核心：在这里声明权限，构建工具会自动写入 AndroidManifest
permissions = [
    "android.permission.CAMERA",
    "android.permission.WRITE_EXTERNAL_STORAGE",
    "android.permission.READ_EXTERNAL_STORAGE"
]

include = [
    "main.py",
    "assets"
]